# tccm-model-lite

./: AUTHORS  ChangeLog  Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: 404.html  Boolean.html  CodeSet.html  ConceptReference.html  ConceptSystem.html  Date.html  Datetime.html  Decimal.html  Double.html  Float.html  Integer.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  Package.html  String.html  Time.html  Uri.html  Uriorcurie.html  code.html  code_set_uri.html  concept_system_uri.html  concept_uri.html  contents.html  credits.html  defined_in.html  definition.html  description.html  designation.html  home.html  index.html  members.html  namespace.html  narrower_than.html  package__system.html  prefix.html  reference.html  root_concept.html  search.html  sitemap.xml
docs/Boolean/: index.html
docs/CodeSet/: index.html
docs/ConceptReference/: index.html
docs/ConceptSystem/: index.html
docs/Date/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Double/: index.html
docs/Float/: index.html
docs/Integer/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/Objectidentifier/: index.html
docs/Package/: index.html
docs/String/: index.html
docs/Time/: index.html
docs/Uri/: index.html
docs/Uriorcurie/: index.html
docs/code/: index.html
docs/code_set_uri/: index.html
docs/concept_system_uri/: index.html
docs/concept_uri/: index.html
docs/contents/: index.html
tccm_model/: tccm_model.py
tests/: test_input_against_model.py
(+18 files in other folders)
