[metadata]
name = tccm_model
url = https://github.com/HOT-Ecosystem/tccm-model
author = Dazhi Jiao
author_email = djiao@jhu.edu
summary = A really nice model
description = A really nice model
long_description = A really nice model
home_page = https://HOT-Ecosystem.github.io/tccm_model
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    tccm_model

data-files = tccm_model/model = tccm_model/model/*
    tccm_model/jsonld_context = tccm_model/jsonld_context/*
    tccm_model/json_schema = tccm_model/json_schema/*
    tccm_model/model = tccm_model/model/*


